--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
 /.idea
 /.vscode
-/nbproject
-/.vagrant
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
-.env
-.phpunit.result.cache
+venv
