add and complete deployment scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.py",
   "scripts": {
     "crawl": "python main.py",
-    "deploy-staging": "./deployments/script/deploy.sh"
+    "deploy-stage": "./deployments/script/deploy-staging.sh",
+    "deploy-prod": "./deployments/script/deploy-production.sh",
+    "deploy-all": "./deployments/script/deploy-all.sh"
   },
   "repository": {
     "type": "git",
