--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
+asn1crypto==0.24.0
 beautifulsoup4==4.6.3
 bs4==0.0.1
 certifi==2018.11.29
+cffi==1.11.5
 chardet==3.0.4
+cryptography==2.4.2
 htmlmin==0.1.12
 idna==2.8
+ndg-httpsclient==0.5.1
+pusher==2.1.1
+pyasn1==0.4.4
+pycparser==2.19
 pymongo==3.7.2
+PyNaCl==1.3.0
+pyOpenSSL==18.0.0
 python-dotenv==0.10.1
 requests==2.21.0
+six==1.12.0
 urllib3==1.24.1
