--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,3 @@
-asn1crypto==0.24.0
-beautifulsoup4==4.6.3
-bs4==0.0.1
-certifi==2018.11.29
-cffi==1.11.5
-chardet==3.0.4
-cryptography==2.4.2
-cssselect==1.0.3
-feedfinder2==0.0.4
-feedparser==5.2.1
-htmlmin==0.1.12
-idna==2.8
-jieba3k==0.35.1
-lxml==4.3.0
-ndg-httpsclient==0.5.1
-newspaper3k==0.2.8
-nltk==3.4
-Pillow==5.4.1
-pusher==2.1.1
-pyasn1==0.4.4
-pycparser==2.19
-pymongo==3.7.2
-PyNaCl==1.3.0
-pyOpenSSL==18.0.0
-python-dateutil==2.7.5
-python-dotenv==0.10.1
-PyYAML==3.13
-requests==2.21.0
-requests-file==1.4.3
-singledispatch==3.4.0.3
-six==1.12.0
-tinysegmenter==0.3
-tldextract==2.2.0
-tqdm==4.29.0
-urllib3==1.24.1
+pymongo
+python-dotenv
+newspaper3k
