--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "main.py",
   "scripts": {
+    "install-dep": "source ./venv/bin/activate && pip install -r requirements.txt",
     "crawl": "python main.py",
     "deploy-stage": "./deployments/script/deploy-staging.sh",
-    "deploy-prod": "./deployments/script/deploy-production.sh"
+    "deploy-prod": "./deployments/script/deploy-production.sh",
+    "clean-install": "rm -rf venv/lib/python3.7/site-packages/** && npm run install-dep"
   },
   "repository": {
     "type": "git",
